# glaw

./: .dockerignore  .env.example  .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHOS.md  LICENSE  PYPI_README.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt  setup
federal-trial-counsel/scripts/: encrypt.sh  pyproject.toml  unlock.sh
federal-trial-counsel/scripts/courtlistener/: README.md  cli.ts  client.ts  examples.md  format.ts  index.ts  out.json  skill.json  types.ts
federal-trial-counsel/scripts/federal_pleading_engine/: README.md  claim_library.ts  cli.ts  drafter.ts  elements.ts  mapper.ts  package.json  risk.ts  schema.ts  skill.json  tsconfig.json
federal-trial-counsel/scripts/federal_pleading_engine/claim_library/: administrative.ts  bivens.ts  commercial.ts  constitutional.ts  employment.ts  erisa.ts  financial_consumer.ts  tax.ts  tort_govt.ts
federal-trial-counsel/scripts/federal_pleading_engine/elements/: administrative.ts  bivens.ts  tax.ts  (+6 more)
federal-trial-counsel/scripts/ftc_dashboard/: __init__.py  __main__.py  server.py
federal-trial-counsel/scripts/ftc_engine/: __init__.py  __main__.py  case_manager.py  claims.py  cli.py  deposition.py  districts.py  doc_analyzer.py  doc_extraction.py  doc_routing.py  drafter.py  exhibits.py  exporter.py  filing_calendar.py  immunity_checks.py  mcp_server.py  pacer_meta.py  questions.py  risk.py  rule11_monitor.py  sample_case.json  sol.py  suggest.py  viability_knowledge.py  wizard.py  wizard_state.py  wizard_steps.py  wizard_ui.py
federal-trial-counsel/scripts/tests/: conftest.py  test_case_manager.py  test_claims.py  test_deposition.py  test_districts.py  test_doc_analyzer.py  test_drafter.py  test_exhibits.py  test_exporter.py  test_filing_calendar.py  test_mcp_server.py  test_pacer_meta.py  test_questions.py  test_risk.py  test_rule11_monitor.py  test_sol.py  test_suggest.py  test_wizard.py
(+1087 files in other folders)
