[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glaw"
version = "1.1.0"
description = "GLAW — a virtual corporate law firm as a Claude Code skill suite (corporate/securities/fund + SEC enforcement, DE/FL/TX forms)"
readme = "PYPI_README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "GLAW contributors" }]
keywords = ["legal", "law", "claude", "claude-code", "skills", "sec", "corporate", "securities", "fund", "agents"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Office/Business",
  "Intended Audience :: Legal Industry",
]

[project.urls]
Homepage = "https://github.com/rikitrader/glaw"
Repository = "https://github.com/rikitrader/glaw"
Issues = "https://github.com/rikitrader/glaw/issues"

[project.scripts]
glaw = "glaw_pkg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["glaw_pkg"]

[tool.hatch.build.targets.sdist]
include = ["glaw_pkg", "PYPI_README.md", "LICENSE", "pyproject.toml"]
