[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftc-engine"
version = "1.0.0"
description = "Federal Trial Counsel - Local execution engine for federal litigation analysis"
requires-python = ">=3.9"
license = {text = "Proprietary"}
dependencies = ["python-docx>=1.1.0", "PyPDF2>=3.0.0"]

[project.scripts]
ftc = "ftc_engine.cli:main"

[tool.setuptools.packages.find]
include = ["ftc_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ftc_engine"]
omit = ["tests/*", "ftc_engine/cli.py", "ftc_engine/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
